[UPDATE] Course schema => ajout champ planId mediaId & authorId
